[package]
name = "redis-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"

bytes = "1"

parking_lot = "0.12.1"


[[example]]
name = "hello_redis"
path = "examples/hello-redis.rs"

[[example]]
name = "async_task_1"
path = "examples/async-task_1.rs"

[[example]]
name = "async_task_2"
path = "examples/async-task_2.rs"

[[example]]
name = "parking_lot"
path = "examples/parking_lot.rs"